app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storebe-deployment
  labels:
    app: storebe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storebe
  template:
    metadata:
      labels:
        app: storebe
    spec:
      containers:
        - name: storebe
          image: leilasinore/storebe:v1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: storebe-service
spec:
  selector:
    app: storebe
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
