ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: store.local
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: storefe-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: storebe-service
            port:
              number: 8000
